Max size for champion portrait (bug fix)
Currently, Wukong's portrait is loading the wrong image from ddragon. As seen here: http://champion.gg/champion/MonkeyKing (as of 6.1.1 patch). 

It's just loading a 1000x1000px green box and because there is no size limit on the site, it's covering the whole page. This change will prevent that from happening again.

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -743,6 +743,8 @@ div.champion-area .container-fluid .row{
     display:block;
     margin:auto;
     margin-top:5px;
+    max-width: 196px;
+    max-height: 196px;
 }
 .champ-index-img{
   border-right: 1px solid rgb(43, 49, 52);
